# gotify_sample

./: Cargo.toml  build.rs  buildDocker.sh  dockerfile
.cargo/: config.toml
proto/: monitorservice.proto
src/: client.rs  grpc_server.rs  helper.rs  main.rs  notification_sender.rs  server.rs
src/monitor/: cyclic_monitor.rs  mod.rs  top_news_monitor.rs
src/monitor/top_news_monitor/: config.rs  mod.rs  news_api_fetcher.rs  soha_scrape_fetcher.rs  vnexpress_scrape_fetcher.rs
src/monitor/top_news_monitor/news_scraper_fetcher/: mod.rs  soha_parser.rs  vnexpress_parser.rs
src/monitor/top_news_monitor/persistence/: mod.rs
