[package]
name = "gotify_sample"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gotify-sender-server"
path = "src/server.rs"

[[bin]]
name = "gotify-sender-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
url = "2.2.2"
serde_json = "1.0.81"
log = "0.4"
env_logger = "0.9.0"
async-trait = "0.1.56"
scraper = "0.13.0"
tonic = "0.8.2"
prost = "0.11.2"
tui = "0.19.0"
anyhow = "1.0.66"

[build-dependencies]
tonic-build = "0.8"
